// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/UserProfile should match snapshot 1`] = `
<Fragment>
  <Connect(ProfilePopoverWcController)
    hideStatus={false}
    overwriteName=""
    src="/api/v4/users/undefined/image?_=0"
    triggerComponentClass="user-popover style--none"
    userId="user_id"
  >
    nickname
  </Connect(ProfilePopoverWcController)>
</Fragment>
`;

exports[`components/UserProfile should match snapshot, when displayUsername is enabled 1`] = `
<Fragment>
  <Connect(ProfilePopoverWcController)
    hideStatus={false}
    overwriteName=""
    src="/api/v4/users/undefined/image?_=0"
    triggerComponentClass="user-popover style--none"
    userId="user_id"
  >
    @username
  </Connect(ProfilePopoverWcController)>
</Fragment>
`;

exports[`components/UserProfile should match snapshot, when popover is disabled 1`] = `
<div
  className="user-popover"
>
  nickname
</div>
`;

exports[`components/UserProfile should match snapshot, when user is shared 1`] = `
<Fragment>
  <Connect(ProfilePopoverWcController)
    hideStatus={false}
    overwriteName=""
    src="/api/v4/users/undefined/image?_=0"
    triggerComponentClass="user-popover style--none"
    userId="user_id"
  >
    nickname
  </Connect(ProfilePopoverWcController)>
</Fragment>
`;

exports[`components/UserProfile should match snapshot, with colorization 1`] = `
<Fragment>
  <Connect(ProfilePopoverWcController)
    hideStatus={false}
    overwriteName=""
    src="/api/v4/users/undefined/image?_=0"
    triggerComponentClass="user-popover style--none"
    triggerComponentStyle={
      Object {
        "color": "#bbd279",
      }
    }
    userId="user_id"
  >
    nickname
  </Connect(ProfilePopoverWcController)>
</Fragment>
`;
